--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,16 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "concurrently": "^9.1.2",
+    "copy-to-clipboard": "^3.3.3",
     "dotenv": "^16.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
     "react-type-animation": "^3.2.0",
