--- a/client/package.json
+++ b/client/package.json
@@ -12,14 +12,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "concurrently": "^9.1.2",
     "copy-to-clipboard": "^3.3.3",
     "dotenv": "^16.5.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -28,8 +32,10 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
+    "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
-    "swiper": "^11.2.8"
+    "swiper": "^11.2.8",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
